icm-macros/testing/unpack/errors/BadContract.sol
pragma solidity ^0.8.30;

// #[unpack(contract = "NonExistent")]
struct MyStruct {
    uint256 value;
}